--- a/_posts/2021-08-31-covid-in-mexico/covid-in-mexico.Rmd
+++ b/_posts/2021-08-31-covid-in-mexico/covid-in-mexico.Rmd
@@ -1,9 +1,16 @@
 ---
-title: "Mexico COVID Stats"
+title: "COVID in Mexico"
+description: |
+  A short description of the post.
+author:
+  - name: Xinran Liu
+    url: https://example.com/norajones
+date: 08-31-2021
 output:
   distill::distill_article:
     self_contained: false
 ---
+
 
 ```{r,include=FALSE}
 knitr::opts_chunk$set(echo = FALSE,message = FALSE,warning = FALSE)
